--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "resetcss",
-  "version": "1.0.0",
+  "name": "normalcss",
+  "version": "1.0.1",
   "description": "A modified CSS reset",
   "main": "reset.css",
   "style": "reset.css",
   "files": [
     "reset.css"
   ],
-  "repository": "necolas/normalize.css",
-  "license": "MIT",
-  "bugs": "https://github.com/necolas/normalize.css/issues",
-  "homepage": "https://necolas.github.io/normalize.css"
+  "repository": "therionus/reset.css",
+  "license": "MIT"
 }
